# segquant

./: .gitignore  Kuaishou_CentOS.repo  README.md  __main__.py  affiner_config.json  build_extensions.sh  cn_dataset_preprocess.py  cn_dataset_test.py  controlnet_main.py  index.html  model_config.yaml  pyproject.toml  requirements.txt  setup.py  test_backward_compatibility.py
baseline/: ptqd.py  tac_diffusion.py
benchmark/: __init__.py  __main__.py  ablation_expr.py  affiner_expr.py  config.py  dev_metric.py  expr.py  expr_old.py  ica.py  lstm.py  main_expr.py  metric.py  multisteps.py  res.json  singlesteps.py  test.py  time_expr.py  utils.py  visual.py  yaml_parser.py
config/: abla_calibrate_config.json  calibrate_config.json  dummy_calibrate.json
configs/: controlnet.json  transformer.json
dataset/: README.md  caption_control_dataset.py  processor.py
model/: activations.py  attention.py  attention_processor.py  autoencoder_kl.py  controlnet_sd3.py  embeddings.py  normalization.py  resnet.py  scheduler.py  stable_diffusion_3_controlnet.py  transformer_sd3.py  unet.py  vae.py
quant/: controlnet_quant.py  controlnet_test.py  record_data.py
sample/: calibrate_set.py  noise_sampler.py  sampler.py
scripts/: launch_affine_expr.sh  launch_expr.sh  launch_metric.sh  plt_dual_scale.py  plt_percentile.py  plt_weight.py  search_recovery.py  stat_percentile.py
segquant/: __init__.py  __init___prebuilt.py  config.py  pattern_detector.py  subset_wrapper.py
test/: test_affine.py  test_conv.py  test_dict.py  test_k.py  test_linear.py  test_neg.py  test_noise.py  (+7 more)
(+128 files in other folders)
