[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segquant"
version = "0.1.0"
description = "A Semantics-Aware and Generalizable Quantization Framework for Diffusion Models"
authors = [
    { name="Anonymous Contributors" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "datasets >=2.21, <3.0",
    "lpips >=0.1.4, <0.2",
    "matplotlib >=3.10, <3.11",
    "numpy >=1.26, <2.0",
    "opencv-python >=4.11, <5.0",
    "pillow >=10.3, <11.0",
    "pytorch-fid >=0.3.0, <0.4",
    "safetensors >=0.4.4, <0.5",
    "scikit-image >=0.25, <0.26",
    "scipy >=1.14, <1.15",
    "torch >=2.6, <2.7",
    "torchvision >=0.21, <0.22",
    "transformers >=4.42, <5.0",
    "tqdm >=4.66, <5.0",
    "zstandard >=0.23, <0.24"
]

[tool.setuptools]
package-dir = {"segquant" = "segquant"}

[tool.setuptools.package-data]
"segquant" = ["src/fake_quant/*.cpp", "src/fake_quant/*.cu"]